--- a/Week_2/Work_1/Task_2/style.css
+++ b/Week_2/Work_1/Task_2/style.css
@@ -1,12 +1,6 @@
-header, footer, #container {
-    width: 80%;
-    height: 500px;
+table td{
     border: solid 1px black;
-    margin: 5px auto;
 }
-header{
-    height: 100px
-}
-footer{
-    height: 70px
+table {
+    margin: 20px auto;
 }
