--- a/Lasha Tavlalashvili Midterm_1/style.css
+++ b/Lasha Tavlalashvili Midterm_1/style.css
@@ -52,6 +52,7 @@ footer {
     min-height: 50px;
     background-color: silver;
     margin: auto;
+    text-align: center;
     border: solid 1px black;
     box-sizing: border-box;
     padding: 10px;
