--- a/Week_9/HomeWork/Assets/css/admin.css
+++ b/Week_9/HomeWork/Assets/css/admin.css
@@ -1,5 +1,5 @@
 header {
-  background: #001f20;
+  background: #1f1f1f;
   color: #ffffff;
 }
 
@@ -9,7 +9,7 @@ header {
 }
 
 .admin-wrapper .left-sidebar {
-  width: 20%;
+  width: 15%;
   height: 100%;
   float: left;
   background: #013638;
